--- a/Wev Dev Cources/HTML, CSS , JS cource/Restorent Web Site/bootstrap/css/style.css
+++ b/Wev Dev Cources/HTML, CSS , JS cource/Restorent Web Site/bootstrap/css/style.css
@@ -127,8 +127,8 @@ img{
 	margin-left: auto;
 	/* margin-left: 10%; */
 	height: 250px;
-	border-color: gray;
-	border-width: 3px;
+	/* border-color: gray; */
+	border-width: 0px;
 	width: 100%;
 	border-style: solid;
 	padding: 0px;
